# maurice-nats

./: .env  docker-compose.yaml  docker-listen.sh  docker-nuke.sh  schemas.sh
nats-echo/: Cargo.toml  Dockerfile
nats-echo/src/: main.rs
nats-echo/src/schemas/: msg_error_generated.rs  root_generated.rs
nats-server/: nats.conf
playlists/: Cargo.toml  Dockerfile
playlists/src/: fbs.rs  main.rs
playlists/src/schemas/: msg_playlists_generated.rs
schemas-builder/: Dockerfile  compile.sh
schemas-builder/schemas/: msg_echo.fbs  msg_error.fbs  msg_playlists.fbs  msg_print.fbs  msg_speakers.fbs  root.fbs
speakers/: Cargo.toml  Dockerfile
speakers/.devcontainer/: devcontainer.json
speakers/src/: fbs.rs  main.rs  mpv_handler.rs  mpv_process.rs
speakers/src/schemas/: msg_echo_generated.rs  msg_print_generated.rs  msg_speakers_generated.rs  root_generated.rs
voice/: Dockerfile  requirements.txt
voice/.devcontainer/: devcontainer.json
voice/src/schemas/: AddSong.py  DurationChanged.py  Echo.py  Error.py  FileEnded.py  InsertSong.py  Message.py  MessageContent.py  MusicVolumeChanged.py  PauseChanged.py  Play.py  PlayContent.py  PlayStarted.py  PlayStopped.py  PlayWav.py  PlayYoutube.py  PlaylistEvent.py  (+29 more)
web-client/: Dockerfile  package.json  tsconfig.app.tsbuildinfo
web-client/public/: site.webmanifest
web-client/src/: App.tsx  main.tsx
web-data-service/: .gitignore  Cargo.toml  Dockerfile
web-data-service/src/: logger.rs  main.rs
web-data-service/src/procedures/: get_youtube_videos.rs  mod.rs
web-data-service/src/routes/: get_youtube_videos.rs
(+17 files in other folders)
