[package]
name = "web-data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.33", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"
paperclip = { version = "0.8.2", features = ["actix4"] }
regex = "1.10.6"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
serde_json = "1.0.125"
